Improve Windows NTFS junction fix